fix(OptionsList): do not close list when clicking scrollbar
related to OPT-4694

--- a/client/src/modules/components/Typeahead/OptionsList.scss
+++ b/client/src/modules/components/Typeahead/OptionsList.scss
@@ -1,5 +1,7 @@
+@import 'shared-styles/shared-styles.scss';
+
 .OptionsList {
-  overflow-y: auto;
+  @include scrollable;
   overflow-x: hidden;
   border: 1px solid var(--silver-darken-80);
   border-radius: 3px;
